--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ nav{
 }
 
 .heroBanner {
-    padding: 60px 0 120px 0;
+    padding: 80px 0 120px 0;
     text-align: center;
 }
 
@@ -146,12 +146,14 @@ footer{
 
 .logo{
     width: 23%;
-    padding: 1%;
+    padding-top: 20px;
+    padding-left: 30px;
     text-align: center;
 }
 
 #logo{
     width: 278px;
+   
 }
 
 .skillsList{
@@ -193,9 +195,23 @@ footer{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    align-items: center;
+    align-items: flex-end;
     display: flex;
     position: relative;
+    padding-bottom: 40px;
+}
+
+#overlay{
+    position: fixed; /* Sit on top of the page content */
+    display: contents; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
 }
 
 #project1{
@@ -248,8 +264,8 @@ footer{
 
 
     #logo{
-        width: 190px;
-        padding: 1.5em;
+        width: 210px;
+        
     }
     .navContainer{
         display: flex;
@@ -260,12 +276,18 @@ footer{
         display: none;
     }
 
+    .heroBanner {
+        padding: 20%;
+        text-align: center;
+    }
+
     .flexContainer {
         width: 100%;
         text-align: center;
     }
     .mySkills{
         display: block;
+        padding-left: 0%;
     }
     #workGrid{
         display: block;
@@ -296,5 +318,7 @@ footer{
     .heroImg{
         max-width: 200px;
         float:inline-end;
+    }
+
 
 }
